bk_ida/gccida/g1/store_expr
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/store_expr/src/expr.c:4411:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v33; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/store_expr/src/expr.c:4412:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v34; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/store_expr/src/expr.c:4418:4: error: expected ';' after expression
rtx v40; // r15 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/store_expr/src/expr.c:4418:5: error: use of undeclared identifier 'v40'
rtx v40; // r15 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/store_expr/src/expr.c:4419:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v41; // r14 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/store_expr/src/expr.c:4420:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *tree; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/store_expr/src/expr.c:4422:4: error: expected ';' after expression
rtx v44; // r14 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/store_expr/src/expr.c:4422:5: error: use of undeclared identifier 'v44'
rtx v44; // r14 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/store_expr/src/expr.c:4423:4: error: expected ';' after expression
rtx v45; // r15 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/store_expr/src/expr.c:4423:5: error: use of undeclared identifier 'v45'
rtx v45; // r15 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/store_expr/src/expr.c:4428:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *copy_size; // [rsp+18h] [rbp-40h] 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/store_expr/src/expr.c:4447:32: error: use of undeclared identifier 'machine_mode'
v10 = expand_expr( exp, 0LL, ( machine_mode)v8, EXPAND_NORMAL); 
                               ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/store_expr/src/expr.c:4451:21: error: use of undeclared identifier 'machine_mode'
v9 = gen_reg_rtx( ( machine_mode)v8); 
                    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/store_expr/src/expr.c:4452:31: error: use of undeclared identifier 'machine_mode'
v10 = expand_expr( exp, v9, ( machine_mode)*( ( unsigned __int8 *)target + 2), EXPAND_NORMAL); 
                              ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/store_expr/src/expr.c:4465:35: error: use of undeclared identifier 'machine_mode'
v10 = expand_expr( exp, target, ( machine_mode)v23, EXPAND_NORMAL); 
                                  ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/store_expr/src/expr.c:4510:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)*( ( unsigned __int8 *)v4 + 2), 
  ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/store_expr/src/expr.c:4511:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)( BYTE5( v3->common.type->block.abstract_origin) >> 1), 
  ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/store_expr/src/expr.c:4515:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)*( unsigned __int8 *)( v4->fld[0].rtwint + 2), 
  ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/store_expr/src/expr.c:4516:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)*( ( unsigned __int8 *)v4 + 2), 
  ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/store_expr/src/obj/expr.o] Error 1
